AB2790 fix: hide sub category descriptions on small devices

--- a/interfaces/Referral-App/src/app/components/offer/offer.component.scss
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.scss
@@ -12,6 +12,8 @@ ion-card {
     height: 85px;
     width: 85px;
     margin: auto;
+    background-color: white;
+    padding: 5%;
   }
 
   ion-card-title {
