--- a/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
+++ b/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
@@ -19,6 +19,8 @@ ion-card {
     height: 85px;
     width: 85px;
     margin: auto;
+    background-color: white;
+    padding: 5%;
   }
 
   ion-card-title {
